fix: add explicit text-align inline style to table cells (#1431)

--- a/apps/web/src/assets/less/app.less
+++ b/apps/web/src/assets/less/app.less
@@ -90,5 +90,5 @@ section {
   margin-bottom: 10px;
   border-collapse: collapse;
   display: table;
-  width: 100% !important;
+  min-width: 100%;
 }
